Implemented TestController
